test/TestSuite/Syntax/Errors/eof_in_istring5.tjp
project test "Test" "1.0" 2009-08-25 +2m 

# MARK: error 6 eof_in_istring5
task t -8<-
  foo
  ->8